--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,23 @@ html,
 body {
   margin: 0;
 }
+@keyframes bounceOnce {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-3px);
+  }
+}
+.hover\:animate-bounceOnce:hover {
+  animation: bounceOnce 200ms ease-out;
+}
+
+.clip-trapezium {
+  clip-path: polygon(8% 0%, 92% 0%, 100% 100%, 0% 100%);
+  
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
