--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,10 @@ body {
   clip-path: polygon(8% 0%, 92% 0%, 100% 100%, 0% 100%);
   
 }
+.clip-triangle {
+  clip-path: polygon(0% 0%, 0% 100%, 100% 100%);
+  
+}
 
 @tailwind base;
 @tailwind components;
